[tool.poetry]
name = "iprecommit"
version = "0.3.0"
description = "Dead-simple Git pre-commit hooks"
authors = ["Ian Fisher <ian@iafisher.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
iprecommit = "iprecommit.main:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.1"
pytest = "^8.3.2"

[project.urls]
Homepage = "https://github.com/iafisher/iprecommit/"
Repository = "https://github.com/iafisher/iprecommit/"
Issues = "https://github.com/iafisher/iprecommit/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
